--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,4 +1,4 @@
-<div *ngIf="loginSerive.getUserRole() === 'employee'">
+<div *ngIf="userSerive.getUserRole() === 'employee'">
     <nav class="bg-gray-800">
         <div class="mx-auto max-w-7xl px-2 sm:px-6 lg:px-8">
             <div class="relative flex h-16 items-center justify-between">
@@ -101,7 +101,7 @@
 
     <!-- vendor -->
 
-<div *ngIf="loginSerive.getUserRole() === 'vendor'">
+<div *ngIf="userSerive.getUserRole() === 'vendor'">
     <nav class="bg-gray-800">
         <div class="mx-auto max-w-7xl px-2 sm:px-6 lg:px-8">
             <div class="relative flex h-16 items-center justify-between">
