--- a/src/app/home/product-Manage/product-edit/product-edit.component.html
+++ b/src/app/home/product-Manage/product-edit/product-edit.component.html
@@ -7,7 +7,7 @@
       </div>
     </div>
     <div class="mx-auto max-w-2xl text-center">
-      <h2 class="text-3xl font-bold tracking-tight text-gray-900 sm:text-4xl">Uodate a Product</h2>
+      <h2 class="text-3xl font-bold tracking-tight text-gray-900 sm:text-4xl">Update a Product</h2>
       <p class="mt-2 text-lg leading-8 text-gray-600">Give a Correct Details of a Product</p>
     </div>
     <form action="#" method="POST" class="mx-auto mt-16 max-w-xl sm:mt-20">
