--- a/src/app/home/product-Manage/product-list/product-list.component.html
+++ b/src/app/home/product-Manage/product-list/product-list.component.html
@@ -41,7 +41,7 @@
                     <td class="py-3 px-4 border-b">{{item.phonenumber}}</td>
                     <div class="mt-2.5 grid grid-cols-2 gap-x-10 gap-y-6 sm:grid-col-2 ">
                         <button type="submit"
-                            class="flex w-full justify-center rounded-md bg-indigo-600 px-3 py-1.5 text-sm font-semibold leading-6 text-white shadow-sm hover:bg-red-500 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600"
+                            class="flex w-full justify-center rounded-md bg-red-600 px-3 py-1.5 text-sm font-semibold leading-6 text-white shadow-sm hover:bg-red-500 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600"
                             (click)="delete(item.id)">Delete
                         </button>
                         <button type="submit"
